# closedcurves

./: .gitignore  README.md  pyproject.toml  setup.sh
src/closedcurves/: draw.py  main.py
tests/: test_draw.py
